/*
 * $Id: ChangeLog,v 1.381 2002/09/17 05:51:41 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-09-16 23:26 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.slx
    * Changed WANTS_EXP (REJECT_OP) to NOT reject : as it may be a valid WITH expression.
    ! Minor optimization for GLOBAL{WS}EXTERAM and WITH{WS}OBJECT.

2002-09-16 22:50 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbpcode.h
  * source/compiler/genc.c
  * source/compiler/harbour.c
  * source/compiler/hbfix.c
  * source/compiler/hbpcode.c
    + Added support for new HB_PUSHGLOBALREF
    + Added PHB_ITEM *pLiveStorage to shadow pGlobals because BCC can't support &pGlobals
     (apparantly because the static array is saved as constant ) so &pLiveStorage is used instead.
    * Modified usage of hb_vm_pGlobals from PHB_ITEM* to PHB_ITEM** required for new GLOBAL by refernce support.

  * include/hbapi.h
    + Added members pGlobals and iGlobals to _HB_CODEBLOCK

  * source/vm/codebloc.c
    + Added support for GLOBALS refrenced in CodeBlocks.

  * source/vm/hvm.c
    + Added hb_vmPushGlobalByRef() to support new HB_P_PUSHGLOBALREF.
    * Modified usage of hb_vm_pGlobals from PHB_ITEM* to PHB_ITEM** required for new GLOBAL by refernce support.

  * source/vm/garbage.c
    * Modified usage of hb_vm_pGlobals from PHB_ITEM* to PHB_ITEM**

2002-09-16 13:30 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * tests/global1.prg
    * Modified to demonstrate sharing and usage of GLOBAL variables from C code.

2002-09-16 11:13 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * makefile.vc
    + Added /FORCE:MULTIPLE to switches used to build hbmake.exe to overcome link error.

  * bin/bld.bat
    + Added 2nd prg support to MSVC, and corrected typo.

  * source/compiler/genc.c
  * source/pp/ppcore.c
    + Added missing ; required by MSVC.
